src/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Account_Currency__c</fullName>
        <label>Account Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>US Dollar (USD)</fullName>
                </value>
                <value>
                    <fullName>EURO (EUR)</fullName>
                </value>
                <value>
                    <fullName>Pound Sterling (GBP)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_is_joint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account is joint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_type__c</fullName>
        <label>Account type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_Balance__c</fullName>
        <label>Available Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Branch_Code__c</fullName>
        <formula>Opportunity__r.User_Branch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_last_transaction__c</fullName>
        <label>Date of last transaction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Account_Number__c</fullName>
        <label>External Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_account_number__c</fullName>
        <externalId>true</externalId>
        <label>Full account number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Joint_Account_Holders__c</fullName>
        <label>Joint Account Holders</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Joint_Primary_Customer__c</fullName>
        <label>Joint Primary Customer</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Accounts_with_IBB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Balance__c</fullName>
        <label>Status Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>